--- a/application.properties
+++ b/application.properties
@@ -16,4 +16,4 @@ spring.jpa.defer-datasource-initialization=true
 spring.application.name=server
 spring.cloud.config.uri=http://localhost:8085
 management.security.enabled=false
-message=Hi
+message=Hi viewers
