--- a/application.properties
+++ b/application.properties
@@ -13,7 +13,4 @@ spring.jpa.defer-datasource-initialization=true
 #spring.output.ansi.enabled=ALWAYS
 ##spring.main.banner-mode=off
 ##logging.pattern.console=
-spring.application.name=server
-spring.cloud.config.uri=http://localhost:8085
-management.security.enabled=false
-message=Hi viewers
+management.endpoints.web.exposure.include=*
