--- a/application.properties
+++ b/application.properties
@@ -14,3 +14,4 @@ spring.jpa.defer-datasource-initialization=true
 ##spring.main.banner-mode=off
 ##logging.pattern.console=
 management.endpoints.web.exposure.include=*
+message=Hi viewers
